package java_design_patterns.P_strategy.math;

public interface Strategy {

    int operate(int a, int b);
}
